--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,6 +13,6 @@
     "NEXT_PUBLIC_KEYSTATIC_STORAGE_KIND": "github",
     "NEXT_PUBLIC_KEYSTATIC_STORAGE_REPO": "arthrod/1-sama-3",
     "KEYSTATIC_PATH_PREFIX": "",
-    "NEXT_PUBLIC_KEYSTATIC_CONTENT_PATH": "src/content"
+    "NEXT_PUBLIC_KEYSTATIC_CONTENT_PATH": "./src/content"
   }
 }
