--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,7 @@
   },
   "vars": {
     "CMS_CLIENT": "keystatic",
+"PUBLIC_KEYSTATIC_GITHUB_APP_SLUG": "1-sama-3",
     "NEXT_PUBLIC_KEYSTATIC_STORAGE_KIND": "github",
     "NEXT_PUBLIC_KEYSTATIC_STORAGE_REPO": "arthrod/1-sama-3",
     "KEYSTATIC_PATH_PREFIX": "",
