--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "1-sama-3",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "opennextjs-cloudflare build",
-    "start": "next start",
-    "lint": "eslint",
-    "preview": "opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
-  },
-  "dependencies": {
-    "@keystatic/core": "^0.5.48",
-    "@keystatic/next": "^5.0.4",
-    "@markdoc/markdoc": "^0.5.4",
-    "framer-motion": "^12.23.25",
-    "next": "^15.5.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
-    "@opennextjs/cloudflare": "latest",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^20.19.25",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "^15.5.7",
-    "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
-    "wrangler": "latest"
-  }
+	"name": "1-sama-3",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "opennextjs-cloudflare build",
+		"start": "next start",
+		"lint": "eslint",
+		"preview": "opennextjs-cloudflare preview",
+		"deploy": "opennextjs-cloudflare deploy",
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+	},
+	"dependencies": {
+		"@keystatic/core": "^0.5.48",
+		"@keystatic/next": "^5.0.4",
+		"@markdoc/markdoc": "^0.5.4",
+		"framer-motion": "^12.23.25",
+		"next": "^15.5.7",
+		"react": "19.2.0",
+		"react-dom": "19.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.8",
+		"@eslint/eslintrc": "^3.3.3",
+		"@opennextjs/cloudflare": "latest",
+		"@tailwindcss/postcss": "^4.1.17",
+		"@types/node": "^20.19.25",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"eslint": "^9.39.1",
+		"eslint-config-next": "^15.5.7",
+		"oxlint": "1.31.0",
+		"tailwindcss": "^4.1.17",
+		"typescript": "^5.9.3",
+		"wrangler": "latest"
+	}
 }
