--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"@keystatic/next": "^5.0.4",
 		"@markdoc/markdoc": "^0.5.4",
 		"framer-motion": "^12.23.25",
-		"next": "^15.5.7",
-		"react": "19.2.0",
-		"react-dom": "19.2.0"
+		"next": "^16.0.7",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
