--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
 		"@eslint/eslintrc": "^3.3.3",
-		"@opennextjs/cloudflare": "latest",
+		"@opennextjs/cloudflare": "^1.3.0",
 		"@tailwindcss/postcss": "^4.1.17",
 		"@types/node": "^20.19.25",
 		"@types/react": "^19.2.7",
@@ -34,6 +34,6 @@
 		"oxlint": "1.31.0",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
-		"wrangler": "latest"
+		"wrangler": "^4.53.0"
 	}
 }
