--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,6 +16,23 @@
 		"KEYSTATIC_PATH_PREFIX": "",
 		"NEXT_PUBLIC_KEYSTATIC_CONTENT_PATH": "./src/content"
 	},
+
+	"observability": {
+		"enabled": false,
+		"head_sampling_rate": 1,
+		"logs": {
+			"enabled": true,
+			"head_sampling_rate": 1,
+			"persist": true,
+			"invocation_logs": true
+		},
+		"traces": {
+			"enabled": true,
+			"persist": true,
+			"head_sampling_rate": 1
+		}
+	},
+
 	"routes": [
 		{
 			"pattern": "*.samarias.org/*",
