--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-	"$schema": "/Users/arthrod/temp/Manual Library/temp/1-sama-3/node_modules/wrangler/config-schema.json",
+	"$schema": "./node_modules/wrangler/config-schema.json",
 	"main": "./worker.ts",
 	"name": "samarias",
 	"compatibility_date": "2025-03-25",
