feat: add www.samarias.org custom domain configuration

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -41,6 +41,10 @@
 			"zone_name": "samarias.org"
 		},
 		{
+			"pattern": "www.samarias.org",
+			"custom_domain": true
+		},
+		{
 			"pattern": "samarias.org",
 			"zone_name": "samarias.org",
 			"custom_domain": true
