feat: Programmatically generate favicon and update apple and app icons to display 'Sá' with a new font.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@keystatic/core": "^0.5.48",
 		"@keystatic/next": "^5.0.4",
 		"@markdoc/markdoc": "^0.5.4",
+		"canvas": "^3.2.0",
 		"framer-motion": "^12.23.25",
 		"next": "^16.0.10",
 		"react": "^19.2.1",
